# SWQA-Project2-3

./: .pre-commit-config.yaml  BMI_cer508.cpp  README.md  pyproject.toml
.github/workflows/: clang-format.yml  main.yml
bmi_project/: .pre-commit-config.yaml  .stylelintrc  BMI_cer508.cpp  bmi_executable  db.sqlite3  pre-commit-config.yaml  requirements.txt
bmi_project/bmi_app/: urls.py  views.py
bmi_project/bmi_app/templates/: bmi.html
bmi_project/bmi_app/templates/bmi_app/: bmi.html
bmi_project/bmi_app/tests/: test_e2e.py  test_views.py
bmi_project/bmi_project/: asgi.py  settings.py  urls.py  wsgi.py
bmi_project/ebextensions/: django.config
bmi_project/static/css/: style.css
bmi_project/static/js/: script.js
